<resources>
    <string name="app_name">Parasitic Launcher</string>

    <!-- pref_allapps_widget_configuration -->
    <string name="icon_settings">Icon settings</string>
    <string name="icon_pack_title">Icon pack</string>
    <string name="icon_pack_list">Icon pack list</string>
    <string name="size_list_dialog_title">Choose size</string>
    <string name="icon_size">Icon size</string>
    <string name="icon_size_small">Small</string>
    <string name="icon_size_normal">Normal</string>
    <string name="icon_size_large">Large</string>
    <string-array name="icon_size_array">
        <item>@string/icon_size_small</item>
        <item>@string/icon_size_normal</item>
        <item>@string/icon_size_large</item>
    </string-array>
    <string name="app_title_text_size">App title size</string>
    <string name="app_title_visibility">Show app title</string>
    <string name="app_title_text_color">App title text color</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_alpha">Alpha</string>
    <string name="widget_settings">Widget settings</string>
    <string name="widget_background">Background</string>
    <string name="widget_background_type_color">Color</string>
    <string name="widget_background_type_image">Image</string>
    <string name="widget_background_choose_type_title">Choose type</string>
    <string-array name="widget_background_type">
        <item>@string/widget_background_type_color</item>
        <item>@string/widget_background_type_image</item>
    </string-array>
    <string name="widget_background_image_alpha_dialog_title">Set background alpha</string>
    <string name="other_settings_title">Other settings</string>
    <string name="sorting_rule">Sorting rule</string>
    <string name="sorting_rule_a_to_z">A to Z</string>
    <string name="sorting_rule_z_to_a">Z to A</string>
    <string name="sorting_rule_recently">Recently use</string>
    <string name="sorting_rule_mostly">Mostly use</string>
    <string-array name="sorting_rule_list">
        <item>@string/sorting_rule_a_to_z</item>
        <item>@string/sorting_rule_z_to_a</item>
        <item>@string/sorting_rule_recently</item>
        <item>@string/sorting_rule_mostly</item>
    </string-array>
    <string name="icon_list">Icon list</string>
    <string name="icon_list_all">All icons</string>
    <string name="icon_list_download">Download</string>
    <string name="icon_list_system">System</string>
    <string name="icon_list_customized">Customized</string>
    <string-array name="icon_list_array">
        <item>@string/icon_list_all</item>
        <item>@string/icon_list_download</item>
        <item>@string/icon_list_system</item>
        <item>@string/icon_list_customized</item>
    </string-array>
    <string name="select_icons">Select icons</string>
    <string name="all_apps_widget_label">Grid all apps</string>
</resources>
