<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/icon_settings">
        <Preference
            android:key="icon_pack"
            android:title="@string/icon_pack_title"></Preference>
        <Preference
            android:key="icon_size"
            android:title="@string/icon_size"></Preference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="app_title_visibility"
            android:title="@string/app_title_visibility"></CheckBoxPreference>
        <Preference
            android:key="title_text_color"
            android:title="@string/app_title_text_color"></Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/widget_settings">
        <Preference
            android:key="widget_background_type"
            android:title="@string/widget_background"></Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other_settings_title">
        <Preference
            android:key="sorting_rule"
            android:title="@string/sorting_rule"></Preference>
    </PreferenceCategory>
</PreferenceScreen>